vendor/utf8proc-sys/utf8proc/utf8proc.h

typedef unsigned char utf8proc_uint8_t;
typedef int utf8proc_int32_t;
typedef __int64 utf8proc_ssize_t;
typedef int utf8proc_ssize_t;
typedef unsigned char utf8proc_bool;
typedef bool utf8proc_bool;
typedef uint8_t utf8proc_uint8_t;
typedef int32_t utf8proc_int32_t;
typedef ptrdiff_t utf8proc_ssize_t;
typedef bool utf8proc_bool;
typedef enum {
  UTF8PROC_NULLTERM  = (1<<0),
  UTF8PROC_STABLE    = (1<<1),
  UTF8PROC_COMPAT    = (1<<2),
  UTF8PROC_COMPOSE   = (1<<3),
  UTF8PROC_DECOMPOSE = (1<<4),
  UTF8PROC_IGNORE    = (1<<5),
  UTF8PROC_REJECTNA  = (1<<6),
  UTF8PROC_NLF2LS    = (1<<7),
  UTF8PROC_NLF2PS    = (1<<8),
  UTF8PROC_NLF2LF    = (UTF8PROC_NLF2LS | UTF8PROC_NLF2PS),
  UTF8PROC_STRIPCC   = (1<<9),
  UTF8PROC_CASEFOLD  = (1<<10),
  UTF8PROC_CHARBOUND = (1<<11),
  UTF8PROC_LUMP      = (1<<12),
  UTF8PROC_STRIPMARK = (1<<13),
  UTF8PROC_STRIPNA    = (1<<14),
} utf8proc_option_t;
typedef enum {
  UTF8PROC_CATEGORY_CN  = 0, 
  UTF8PROC_CATEGORY_LU  = 1, 
  UTF8PROC_CATEGORY_LL  = 2, 
  UTF8PROC_CATEGORY_LT  = 3, 
  UTF8PROC_CATEGORY_LM  = 4, 
  UTF8PROC_CATEGORY_LO  = 5, 
  UTF8PROC_CATEGORY_MN  = 6, 
  UTF8PROC_CATEGORY_MC  = 7, 
  UTF8PROC_CATEGORY_ME  = 8, 
  UTF8PROC_CATEGORY_ND  = 9, 
  UTF8PROC_CATEGORY_NL = 10, 
  UTF8PROC_CATEGORY_NO = 11, 
  UTF8PROC_CATEGORY_PC = 12, 
  UTF8PROC_CATEGORY_PD = 13, 
  UTF8PROC_CATEGORY_PS = 14, 
  UTF8PROC_CATEGORY_PE = 15, 
  UTF8PROC_CATEGORY_PI = 16, 
  UTF8PROC_CATEGORY_PF = 17, 
  UTF8PROC_CATEGORY_PO = 18, 
  UTF8PROC_CATEGORY_SM = 19, 
  UTF8PROC_CATEGORY_SC = 20, 
  UTF8PROC_CATEGORY_SK = 21, 
  UTF8PROC_CATEGORY_SO = 22, 
  UTF8PROC_CATEGORY_ZS = 23, 
  UTF8PROC_CATEGORY_ZL = 24, 
  UTF8PROC_CATEGORY_ZP = 25, 
  UTF8PROC_CATEGORY_CC = 26, 
  UTF8PROC_CATEGORY_CF = 27, 
  UTF8PROC_CATEGORY_CS = 28, 
  UTF8PROC_CATEGORY_CO = 29, 
} utf8proc_category_t;
typedef utf8proc_int32_t (*utf8proc_custom_func)(utf8proc_int32_t codepoint, void *data);
UTF8PROC_DLLEXPORT const char *utf8proc_errmsg(utf8proc_ssize_t errcode);
UTF8PROC_DLLEXPORT utf8proc_ssize_t utf8proc_decompose_char(
  utf8proc_int32_t codepoint, utf8proc_int32_t *dst, utf8proc_ssize_t bufsize,
  utf8proc_option_t options, int *last_boundclass
);
UTF8PROC_DLLEXPORT utf8proc_ssize_t utf8proc_decompose(
  const utf8proc_uint8_t *str, utf8proc_ssize_t strlen,
  utf8proc_int32_t *buffer, utf8proc_ssize_t bufsize, utf8proc_option_t options
);
UTF8PROC_DLLEXPORT utf8proc_ssize_t utf8proc_decompose_custom(
  const utf8proc_uint8_t *str, utf8proc_ssize_t strlen,
  utf8proc_int32_t *buffer, utf8proc_ssize_t bufsize, utf8proc_option_t options,
  utf8proc_custom_func custom_func, void *custom_data
);
UTF8PROC_DLLEXPORT utf8proc_ssize_t utf8proc_normalize_utf32(utf8proc_int32_t *buffer, utf8proc_ssize_t length, utf8proc_option_t options);
UTF8PROC_DLLEXPORT utf8proc_ssize_t utf8proc_reencode(utf8proc_int32_t *buffer, utf8proc_ssize_t length, utf8proc_option_t options);
UTF8PROC_DLLEXPORT utf8proc_bool utf8proc_grapheme_break_stateful(
    utf8proc_int32_t codepoint1, utf8proc_int32_t codepoint2, utf8proc_int32_t *state);
UTF8PROC_DLLEXPORT utf8proc_bool utf8proc_grapheme_break(
    utf8proc_int32_t codepoint1, utf8proc_int32_t codepoint2);
UTF8PROC_DLLEXPORT utf8proc_int32_t utf8proc_tolower(utf8proc_int32_t c);
UTF8PROC_DLLEXPORT utf8proc_int32_t utf8proc_toupper(utf8proc_int32_t c);
UTF8PROC_DLLEXPORT utf8proc_int32_t utf8proc_totitle(utf8proc_int32_t c);
UTF8PROC_DLLEXPORT int utf8proc_islower(utf8proc_int32_t c);
UTF8PROC_DLLEXPORT int utf8proc_isupper(utf8proc_int32_t c);
UTF8PROC_DLLEXPORT int utf8proc_charwidth(utf8proc_int32_t codepoint);
UTF8PROC_DLLEXPORT utf8proc_category_t utf8proc_category(utf8proc_int32_t codepoint);
UTF8PROC_DLLEXPORT const char *utf8proc_category_string(utf8proc_int32_t codepoint);
UTF8PROC_DLLEXPORT utf8proc_ssize_t utf8proc_map_custom(
  const utf8proc_uint8_t *str, utf8proc_ssize_t strlen, utf8proc_uint8_t **dstptr, utf8proc_option_t options,
  utf8proc_custom_func custom_func, void *custom_data
);