vendor/utf8proc-sys/src/generated.rs

unsafe extern "C" {
    #[doc = " Decompose a codepoint into an array of codepoints.\n\n @param codepoint the codepoint.\n @param dst the destination buffer.\n @param bufsize the size of the destination buffer.\n @param options one or more of the following flags:\n - @ref UTF8PROC_REJECTNA  - return an error `codepoint` is unassigned\n - @ref UTF8PROC_IGNORE    - strip \"default ignorable\" codepoints\n - @ref UTF8PROC_CASEFOLD  - apply Unicode casefolding\n - @ref UTF8PROC_COMPAT    - replace certain codepoints with their\n                             compatibility decomposition\n - @ref UTF8PROC_CHARBOUND - insert 0xFF bytes before each grapheme cluster\n - @ref UTF8PROC_LUMP      - lump certain different codepoints together\n - @ref UTF8PROC_STRIPMARK - remove all character marks\n - @ref UTF8PROC_STRIPNA   - remove unassigned codepoints\n @param last_boundclass\n Pointer to an integer variable containing\n the previous codepoint's (boundclass + indic_conjunct_break << 1) if the @ref UTF8PROC_CHARBOUND\n option is used.  If the string is being processed in order, this can be initialized to 0 for\n the beginning of the string, and is thereafter updated automatically.  Otherwise, this parameter is ignored.\n\n @return\n In case of success, the number of codepoints written is returned; in case\n of an error, a negative error code is returned (utf8proc_errmsg()).\n @par\n If the number of written codepoints would be bigger than `bufsize`, the\n required buffer size is returned, while the buffer will be overwritten with\n undefined data."]
    pub fn utf8proc_decompose_char(
        codepoint: utf8proc_int32_t,
        dst: *mut utf8proc_int32_t,
        bufsize: utf8proc_ssize_t,
        options: utf8proc_option_t,
        last_boundclass: *mut ::std::os::raw::c_int,
    ) -> utf8proc_ssize_t;
}
unsafe extern "C" {
    #[doc = " The same as utf8proc_decompose_char(), but acts on a whole UTF-8\n string and orders the decomposed sequences correctly.\n\n If the @ref UTF8PROC_NULLTERM flag in `options` is set, processing\n will be stopped, when a NULL byte is encountered, otherwise `strlen`\n bytes are processed.  The result (in the form of 32-bit unicode\n codepoints) is written into the buffer being pointed to by\n `buffer` (which must contain at least `bufsize` entries).  In case of\n success, the number of codepoints written is returned; in case of an\n error, a negative error code is returned (utf8proc_errmsg()).\n See utf8proc_decompose_custom() to supply additional transformations.\n\n If the number of written codepoints would be bigger than `bufsize`, the\n required buffer size is returned, while the buffer will be overwritten with\n undefined data."]
    pub fn utf8proc_decompose(
        str_: *const utf8proc_uint8_t,
        strlen: utf8proc_ssize_t,
        buffer: *mut utf8proc_int32_t,
        bufsize: utf8proc_ssize_t,
        options: utf8proc_option_t,
    ) -> utf8proc_ssize_t;
}
unsafe extern "C" {
    #[doc = " The same as utf8proc_decompose(), but also takes a `custom_func` mapping function\n that is called on each codepoint in `str` before any other transformations\n (along with a `custom_data` pointer that is passed through to `custom_func`).\n The `custom_func` argument is ignored if it is `NULL`.  See also utf8proc_map_custom()."]
    pub fn utf8proc_decompose_custom(
        str_: *const utf8proc_uint8_t,
        strlen: utf8proc_ssize_t,
        buffer: *mut utf8proc_int32_t,
        bufsize: utf8proc_ssize_t,
        options: utf8proc_option_t,
        custom_func: utf8proc_custom_func,
        custom_data: *mut ::std::os::raw::c_void,
    ) -> utf8proc_ssize_t;
}
unsafe extern "C" {
    #[doc = " Normalizes the sequence of `length` codepoints pointed to by `buffer`\n in-place (i.e., the result is also stored in `buffer`).\n\n @param buffer the (native-endian UTF-32) unicode codepoints to re-encode.\n @param length the length (in codepoints) of the buffer.\n @param options a bitwise or (`|`) of one or more of the following flags:\n - @ref UTF8PROC_NLF2LS  - convert LF, CRLF, CR and NEL into LS\n - @ref UTF8PROC_NLF2PS  - convert LF, CRLF, CR and NEL into PS\n - @ref UTF8PROC_NLF2LF  - convert LF, CRLF, CR and NEL into LF\n - @ref UTF8PROC_STRIPCC - strip or convert all non-affected control characters\n - @ref UTF8PROC_COMPOSE - try to combine decomposed codepoints into composite\n                           codepoints\n - @ref UTF8PROC_STABLE  - prohibit combining characters that would violate\n                           the unicode versioning stability\n\n @return\n In case of success, the length (in codepoints) of the normalized UTF-32 string is\n returned; otherwise, a negative error code is returned (utf8proc_errmsg()).\n\n @warning The entries of the array pointed to by `str` have to be in the\n          range `0x0000` to `0x10FFFF`. Otherwise, the program might crash!"]
    pub fn utf8proc_normalize_utf32(
        buffer: *mut utf8proc_int32_t,
        length: utf8proc_ssize_t,
        options: utf8proc_option_t,
    ) -> utf8proc_ssize_t;
}
unsafe extern "C" {
    #[doc = " Reencodes the sequence of `length` codepoints pointed to by `buffer`\n UTF-8 data in-place (i.e., the result is also stored in `buffer`).\n Can optionally normalize the UTF-32 sequence prior to UTF-8 conversion.\n\n @param buffer the (native-endian UTF-32) unicode codepoints to re-encode.\n @param length the length (in codepoints) of the buffer.\n @param options a bitwise or (`|`) of one or more of the following flags:\n - @ref UTF8PROC_NLF2LS  - convert LF, CRLF, CR and NEL into LS\n - @ref UTF8PROC_NLF2PS  - convert LF, CRLF, CR and NEL into PS\n - @ref UTF8PROC_NLF2LF  - convert LF, CRLF, CR and NEL into LF\n - @ref UTF8PROC_STRIPCC - strip or convert all non-affected control characters\n - @ref UTF8PROC_COMPOSE - try to combine decomposed codepoints into composite\n                           codepoints\n - @ref UTF8PROC_STABLE  - prohibit combining characters that would violate\n                           the unicode versioning stability\n - @ref UTF8PROC_CHARBOUND - insert 0xFF bytes before each grapheme cluster\n\n @return\n In case of success, the length (in bytes) of the resulting nul-terminated\n UTF-8 string is returned; otherwise, a negative error code is returned\n (utf8proc_errmsg()).\n\n @warning The amount of free space pointed to by `buffer` must\n          exceed the amount of the input data by one byte, and the\n          entries of the array pointed to by `str` have to be in the\n          range `0x0000` to `0x10FFFF`. Otherwise, the program might crash!"]
    pub fn utf8proc_reencode(
        buffer: *mut utf8proc_int32_t,
        length: utf8proc_ssize_t,
        options: utf8proc_option_t,
    ) -> utf8proc_ssize_t;
}
unsafe extern "C" {
    #[doc = " Given a pair of consecutive codepoints, return whether a grapheme break is\n permitted between them (as defined by the extended grapheme clusters in UAX#29).\n\n @param codepoint1 The first codepoint.\n @param codepoint2 The second codepoint, occurring consecutively after `codepoint1`.\n @param state Beginning with Version 29 (Unicode 9.0.0), this algorithm requires\n              state to break graphemes. This state can be passed in as a pointer\n              in the `state` argument and should initially be set to 0. If the\n              state is not passed in (i.e. a null pointer is passed), UAX#29 rules\n              GB10/12/13 which require this state will not be applied, essentially\n              matching the rules in Unicode 8.0.0.\n\n @warning If the state parameter is used, `utf8proc_grapheme_break_stateful` must\n          be called IN ORDER on ALL potential breaks in a string.  However, it\n          is safe to reset the state to zero after a grapheme break."]
    pub fn utf8proc_grapheme_break_stateful(
        codepoint1: utf8proc_int32_t,
        codepoint2: utf8proc_int32_t,
        state: *mut utf8proc_int32_t,
    ) -> utf8proc_bool;
}
unsafe extern "C" {
    #[doc = " Same as utf8proc_grapheme_break_stateful(), except without support for the\n Unicode 9 additions to the algorithm. Supported for legacy reasons."]
    pub fn utf8proc_grapheme_break(codepoint1: utf8proc_int32_t, codepoint2: utf8proc_int32_t) -> utf8proc_bool;
}
unsafe extern "C" {
    #[doc = " Given a codepoint `c`, return the codepoint of the corresponding\n lower-case character, if any; otherwise (if there is no lower-case\n variant, or if `c` is not a valid codepoint) return `c`."]
    pub fn utf8proc_tolower(c: utf8proc_int32_t) -> utf8proc_int32_t;
}
unsafe extern "C" {
    #[doc = " Given a codepoint `c`, return the codepoint of the corresponding\n upper-case character, if any; otherwise (if there is no upper-case\n variant, or if `c` is not a valid codepoint) return `c`."]
    pub fn utf8proc_toupper(c: utf8proc_int32_t) -> utf8proc_int32_t;
}
unsafe extern "C" {
    #[doc = " Given a codepoint `c`, return the codepoint of the corresponding\n title-case character, if any; otherwise (if there is no title-case\n variant, or if `c` is not a valid codepoint) return `c`."]
    pub fn utf8proc_totitle(c: utf8proc_int32_t) -> utf8proc_int32_t;
}
unsafe extern "C" {
    #[doc = " Given a codepoint `c`, return `1` if the codepoint corresponds to a lower-case character\n and `0` otherwise."]
    pub fn utf8proc_islower(c: utf8proc_int32_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " Given a codepoint `c`, return `1` if the codepoint corresponds to an upper-case character\n and `0` otherwise."]
    pub fn utf8proc_isupper(c: utf8proc_int32_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " Given a codepoint, return a character width analogous to `wcwidth(codepoint)`,\n except that a width of 0 is returned for non-printable codepoints\n instead of -1 as in `wcwidth`.\n\n @note\n If you want to check for particular types of non-printable characters,\n (analogous to `isprint` or `iscntrl`), use utf8proc_category()."]
    pub fn utf8proc_charwidth(codepoint: utf8proc_int32_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " Given a codepoint, return whether it has East Asian width class A (Ambiguous)\n\n Codepoints with this property are considered to have charwidth 1 (if they are printable)\n but some East Asian fonts render them as double width."]
    pub fn utf8proc_charwidth_ambiguous(codepoint: utf8proc_int32_t) -> utf8proc_bool;
}
unsafe extern "C" {
    #[doc = " Return the Unicode category for the codepoint (one of the\n @ref utf8proc_category_t constants.)"]
    pub fn utf8proc_category(codepoint: utf8proc_int32_t) -> utf8proc_category_t;
}
unsafe extern "C" {
    #[doc = " Return the two-letter (nul-terminated) Unicode category string for\n the codepoint (e.g. `\"Lu\"` or `\"Co\"`)."]
    pub fn utf8proc_category_string(codepoint: utf8proc_int32_t) -> *const ::std::os::raw::c_char;
}
